static/renderer/styles/styles.css
/* ... */
/* Title */
.title-bar__title {
  display: inline;
  flex: 1;
  padding-left: 2px;
  font-size: 16px;
  position: relative;
  top: -2px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
/* Button Bar */
.title-bar__button-bar {
  height: 22px;
  flex: 0 1 auto;
  display: block;
  float: right;
  position: relative;
  top: -4px;
}
/* Button Bar Buttons */
.title-bar__button-bar__min,
.title-bar__button-bar__max,
.title-bar__button-bar__cross {
  height: 100%;
  width: 28px;
  float: left;
  -webkit-app-region: no-drag;
  /* Pimp */
  cursor: pointer;
  background-repeat: no-repeat;
  background-position: center;
  opacity: 0.3;
}
.title-bar__button-bar__min:hover,
.title-bar__button-bar__max:hover,
.title-bar__button-bar__cross:hover {
  opacity: 1;
}
/* Minimize Button */
.title-bar__button-bar__min {
  background-image: url('../images/min.png');
}
.title-bar__button-bar__min:hover {
  background-color: #242428;
}
/* Maximize Button */
.title-bar__button-bar__max {
  background-image: url('../images/max.png');
}
.title-bar__button-bar__max:hover {
  background-color: #242428;
}
/* Cross Button */
.title-bar__button-bar__cross {
  background-image: url('../images/cross.png');
}
.title-bar__button-bar__cross:hover {
  background-color: #eb4b4b;
}


/* ------ Header ------ */
.header {
  font-size: 0.75em;
  padding: 0.3em;
  padding-bottom: 0.4em;
  /* Pimp */
  background-color: #2d2d30;
}
.header__menu {
  display: inline-block;
  padding: 0.3em 0;
  margin-right: 1em;
  margin-bottom: 0.5em;
  /* Pimp */
  user-select: none;
}
.header__menu__item {
  display: inline-block;
  padding: 0.3em 0.7em;
  border: 1px solid rgba(0,0,0,0);
}
.header__menu__item:hover {
  /* Pimp */
  background-color: #3c2d4b;
  border-color: #d33682;
}
.header__menu__item__link {
  /* Pimp */
  cursor: pointer;
  text-decoration: none;
  color: var(--theme__text-color);
}
/* Header Search */
.header__search {
  width: 12em;
  padding: 0.25em;
  margin-right: 0.5em;
  /* Pimp */
  border: 1px solid var(--theme__search-bar__outline-color);
  background-color: var(--theme__background-color);
}
.header__search__input, .header__search__input:active {
  font-size: 1em;
  /* Pimp */
  color: var(--theme__text-color);
  background: none;
  border: none;
  outline: none;
}
.header__search__tag {
  /* Pimp */
  border: 1px solid #888;
  background-color: #aaa;
}
.header__search__tag__text,
.header__search__tag__text:active {
  /* Pimp */
}
.header__search__tag__remove {
  /* Pimp */
  /*
  border: 0.1em solid #800;
  border-radius: 999em;
  background-color: #a00;
  font-size: 0.75rem;
  */
}
.header__search__tag__remove:hover {
  /* Pimp */
  cursor: pointer;
}
.header__search__tag__remove__inner {
  /* Pimp */
  color: #c00;
  font-family: monospace, monospace;
}
/** */
.header__extreme {
  display: inline-block;
  white-space: nowrap;
  padding: 0.6em;
  padding-top: 0;
}
.header__extreme__text {
  display: inline;
}
.header__extreme__toggle {
  vertical-align: middle;
}


/* ------ Footer ------ */
.footer {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  /* Pimp */
  user-select: none;
  background-color: #2a2a2b;
}
.footer__right {
  float: right;
  white-space: initial;
  max-width: 100%;
}
/* Game Count */
.footer__game-count {
  float: left;
  margin-left: 0.3em;
}
/* Layout Selector */
.footer__layout-selector {
  display: inline-block;
  margin: 0 0.3em;
  font-size: 0.8rem;
}
/* Scale Slider */
.footer__scale-slider {
  display: inline-block;
  margin: 0 0.3em;
  width: 12em;
  max-width: calc(100% - 0.3em * 2); /* 100% - Horizontal margin */
}
.footer__scale-slider__inner {
  width: 100%;
  height: 1em;
}

/* ------ Home ------ */
.home {
  width: 100%;
  height: 100%;
  padding: 1em;
  text-align: center;
}
.home__title {
  font-size: 2.5em;
}
.home__subtitle {
  font-size: 1.1em;
  padding-bottom: 1em;
}
.home__tutorial {
  line-height: 1.35;
}


/* ------ Page-Not-Found (404) ------ */
.page-not-found {
  width: 100%;
  height: 100%;
  padding: 1em;
  text-align: center;
}
.page-not-found__error-number {
  font-size: 8em;
}
.page-not-found__title {
  font-size: 2em;
  padding-bottom: 0.5em;
}


/* ------ About ------ */
.about {
  width: 100%;
  height: 100%;
  padding: 1em;
  text-align: center;
}
.about__title {
  font-size: 2.5em;
  padding-bottom: 0.5em;
}


/* ------ Browse ------ */
.game-browser {
  width: 100%;
  height: 100%;
  display: flex;
}
.game-browser__left {
  flex: 1 0 auto;
}
.game-browser__right {
  width: 20em;
  /* Pimp */
  background-color: #1a1a1b;
}
.game-browser__right p {
  display: inline;
}
.game-browser__right--none { /* No Game Selected */
  padding: 1em 0;
  text-align: center;
}
.game-browser__right--none p {
  font-size: 1.5em;
  font-weight: bold;
}

/* BrowserSidebar */
.browse-sidebar {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  padding: 0.5em 0.8em;
  overflow-x: hidden;
  overflow-y: auto;
}
/* BrowserSidebar Section */
.browse-sidebar__section {
  margin-bottom: 1.2rem;
}
.browse-sidebar__section:last-child {
  margin-bottom: 0;
}
.browse-sidebar__section--below-gap {
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
}
/* BrowserSidebar Row */
.browse-sidebar__row {
  margin-bottom: 0.2rem;
}
.browse-sidebar__row:last-child {
  margin-bottom: 0;
}
.browse-sidebar__row p {
  user-select: none;
  cursor: default;
}
.browse-sidebar__row--title {
  font-size: 1.2em;
  font-weight: bold;
  margin-bottom: 0;
}
.browse-sidebar__row--one-line {
  display: flex;
}
.browse-sidebar__row--one-line :first-child {
  flex: 0 0 auto;
  white-space: pre;
}
.browse-sidebar__row--one-line :last-child {
  flex: 1 0 auto;
}
.browse-sidebar__row--save {
  background-color: #09090a;
  padding: 0.5rem;
}
.browse-sidebar__row--save :last-child {
  float: right;
}
.browse-sidebar__row  .browse-sidebar__row__editable-text {
  display: block;
  font-size: 0.9em;
}
/* ... */

